# flappy-bird

./: .gitignore  CMakeLists.txt  build.sh
src/: audio.c  audio.h  constants.h  globals.h  init.c  init.h  main.c  obstacles.c  obstacles.h  player.c  player.h  structs.h
